--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -198,29 +198,32 @@
     var newFriendData = {
       name: $("#name").val().trim(),
       photo: $("#photo").val().trim(),
-      q1: $("#q1").val().trim(),
-      q2: $("#q2").val().trim(),
-      q3: $("#q3").val().trim(),
-      q4: $("#q4").val().trim(),
-      q5: $("#q5").val().trim(),
-      q6: $("#q6").val().trim(),
-      q7: $("#q7").val().trim(),
-      q8: $("#q8").val().trim(),
-      q9: $("#q9").val().trim(),
-      q10: $("#q10").val().trim(),
+      scores: [$("#q1").val().trim(), 
+      $("#q2").val().trim(), 
+      $("#q3").val().trim(),
+      $("#q4").val().trim(),
+      $("#q5").val().trim(),
+      $("#q6").val().trim(),
+      $("#q7").val().trim(),
+      $("#q8").val().trim(),
+      $("#q9").val().trim(),
+      $("#q10").val().trim()]
     };
 
 console.log("1 ", newFriendData);
 //console.log("2 ", JSON.stringify(newFriendData));
 
-   $.post("/api/friends", newFriendData, 
+   $.post("/api/friends", newFriendData).then(function(result){
+      console.log(result, "--------- this is the match --------------");
+   });
   
-  function() {
-    if(true) {
-      console.log("Boom")
-    }
-    else {console.log("Not boom")}
-  });
+  // function(data) {
+  //   console.log(data);
+    // if(true) {
+    //   console.log("Boom")
+    // }
+    // else {console.log("Not boom")}
+  //});
     
     
 
